--- a/final-project/src/index.html
+++ b/final-project/src/index.html
@@ -9,8 +9,24 @@
       content="width=device-width, initial-scale=1"
     />
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="mat-typography mat-app-background">
     <app-root></app-root>
   </body>
 </html>
